# agents

./: .env  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  fastapi_server_start.py  pyproject.toml  supervisord.conf
.claude/agents/: code-reviewer.md
agent_runtime/: eqv_agent_runtime.py  eqv_runtime_test.py
runtime_sandbox_server/: conf.env
src/ExamQuestionVerification/: README.md  conf.yaml  eqv_agent.py  eqv_agent_runtime.py  exam_question_verification.py  prompts.py  router.py  schemas.py
src/ExamSettingsExtraction/: README.md  conf.yaml  exam_settings_extraction.py  prompts.py  router.py  schemas.py
src/ScoreJudgment/: README.md  conf.yaml  prompts.py  router.py  schemas.py  score_judgment.py
src/exam_generation/: READNE.md  knowledge_question_generator.py  multi_type_paper_generator.py  prompts.py  router.py  schemas.py
src/user_analysis/: READNE.md  conf.yaml  prompts.py  router.py  schemas.py  student_analyzer.py  teacher_analyzer_multimodal.py
src/user_analysis/data/student_input/: 数据分析期末考试答题卡 44.md
src/user_analysis/data/student_output/: 学生个性化学习报告_20251113_100400.md
src/user_analysis/data/teacher_output/: 图表分析综合报告.md
test/: eqv_fastapi_test.py  eqv_runtime_test.py
